1.4.3 fixed prices playable wrap

--- a/src/scss/prices.scss
+++ b/src/scss/prices.scss
@@ -297,7 +297,7 @@
 		}
 	}
 }
-@media (max-height: 800px) {
+@media (min-width: 500px) and (max-height: 800px) {
 	.prices-card {
 		padding-top: 60px;
 	}
